# file-backup

./: .gitignore  DESCRIPTION.md  README.md  build-exe.py  build.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: push-gitee.yml  python-app.yml
src/: __init__.py  log.py  models.py
src/backend/: __init__.py  backend.py  backend_cmd.py  config.py
src/backend/baidu/: __init__.py  backend.py
src/backend/baidu/sdk/: __init__.py  const.py  exceptions.py  sdk_config.py
src/backend/local/: __init__.py  backend.py  config.py
src/backend/server/: __init__.py  backend.py  config.py
src/backend/tx_cos/: __init__.py  backend.py  config.py
src/backup/: __init__.py  backup.py  backup_cmd.py  backup_host.py
src/backup/host/: __init__.py  _host.py
src/config/: __init__.py  config.py  config_model.py
src/console/: __init__.py  console.py  console_cmd.py  input_queue.py
src/console/console/: __init__.py  console.py  utils.py
src/const/: __init__.py  exceptions.py  path.py
src/recover/: __init__.py  recover.py  recover_cmd.py
src/strategy/: __init__.py  compress.py  increment.py  protocol.py  strategy.py
src/strategy/compress/: __init__.py  compress.py
src/strategy/increment/: __init__.py  increment.py
src/utils/: __init__.py  ansi_html.py  hooks.py  json_path.py  log_style.py  typed_queue.py  utils.py
src/utils/archives/: __init__.py  archives.py  raw_7z.py
src/utils/byterw/: __init__.py  ba2value.py  byte_reader.py  byte_writer.py  common.py  crypt.c  crypt.py  mv2value.py  value2ba.py
src/utils/win_toast/: __init__.py  raw_icon.py
(+32 files in other folders)
