[tool.poetry]
name = "file-backup"
version = "0.1.0"
description = ""
authors = ["wyf7685 <69091901+wyf7685@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "file_backup"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pydantic = "^2.4.2"
loguru = "^0.7.0"
aiohttp = "^3.8.5"
aiofiles = "^23.1.0"
pyinstaller = "^6.1.0"
win11toast = "^0.32"
urllib3 = "^2.0.7"
python-dateutil = "^2.8.2"


[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "default"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
