[tool.poetry]
name = "file-backup"
version = "0.1.0"
description = ""
authors = ["wyf7685 <69091901+wyf7685@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pydantic = "^2.6.1"
loguru = "^0.7.0"
aiohttp = "^3.9.3"
urllib3 = "^2.2.0"
python-dateutil = "^2.8.2"


[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "default"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
